--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Document</title>
 </head>
+
 <body>
+    <a href="./index.html">На початок</a>
+
     <form>
-        <input type="text" name="city">
+        <input type="text" name="city" />
         <select name="days" id="days">
             <option value="3">3</option>
             <option value="5">5</option>
             <option value="7">7</option>
         </select>
-        <button class="submit" type="submit">Search</button>
+        <button class="submit" type="submit">Знайти</button>
     </form>
-    <ul class="list-js"></ul>
-    <script src="script.js" type="module"></script>
+    <ul class="js-list"></ul>
+    <script src="./script.js"></script>
 </body>
+
 </html>
 
-<img src="" alt="">
+
